# affordance_field

./: .gitignore  README.md  pyproject.toml
affordance/: affordance_config.py  affordance_field.py  affordance_fieldnames.py  affordance_model.py  affordance_pipeline.py
affordance/data/: affordance_datamanager.py
affordance/data/utils/: affordance_dataloader.py  locate.py  model_util.py
affordance/data/utils/dino_aff/: utils.py  vision_transformer.py
