[project]
name = "affordance-method"
description = "Template repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["affordance*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
affordance = 'affordance.affordance_config:method_template'
